Showed API key & ID to swagger endpoint page.
