# lib/edge_commander_web/controllers/nvrs_controller.ex
@@ -44,8 +44,8 @@ defmodule EdgeCommanderWeb.NvrsController do
     description "Returns nvrs list"
     summary "Returns all nvrs"
     parameters do
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "nvrs"
     response 200, "Success"
@@ -64,8 +64,8 @@ defmodule EdgeCommanderWeb.NvrsController do
       rtsp_port :query, :integer, "", required: true
       sdk_port :query, :integer, "", required: true
       is_monitoring :query, :boolean, "", default: false
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "nvrs"
     response 201, "Success"
@@ -76,8 +76,8 @@ defmodule EdgeCommanderWeb.NvrsController do
     summary "Delete nvr by ID"
     parameters do
       id :path, :string, "Nvr id to delete", required: true
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "nvrs"
     response 200, "Success"
@@ -97,8 +97,8 @@ defmodule EdgeCommanderWeb.NvrsController do
       rtsp_port :query, :integer, "Updated rtsp port of the nvr"
       sdk_port :query, :integer, "Updated sdk port of the nvr"
       is_monitoring :query, :boolean, ""
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "nvrs"
     response 201, "Success"
