# lib/edge_commander_web/controllers/routers_controller.ex
@@ -31,8 +31,8 @@ defmodule EdgeCommanderWeb.RoutersController do
     description "Returns routers list"
     summary "Returns all routers"
     parameters do
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "routers"
     response 200, "Success"
@@ -48,8 +48,8 @@ defmodule EdgeCommanderWeb.RoutersController do
       ip :query, :string, "", required: true
       port :query, :integer, "", required: true
       is_monitoring :query, :boolean, "", default: false
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "routers"
     response 201, "Success"
@@ -66,8 +66,8 @@ defmodule EdgeCommanderWeb.RoutersController do
       ip :query, :string, "Updated ip of the router"
       port :query, :integer, "Updated port of the router"
       is_monitoring :query, :boolean, ""
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "routers"
     response 201, "Success"
@@ -78,8 +78,8 @@ defmodule EdgeCommanderWeb.RoutersController do
     summary "Delete router by ID"
     parameters do
       id :path, :string, "Router id to delete", required: true
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "routers"
     response 201, "Success"
