# lib/edge_commander_web/controllers/sites_controller.ex
@@ -33,8 +33,8 @@ defmodule EdgeCommanderWeb.SitesController do
     description "Returns sites list"
     summary "Returns all sites"
     parameters do
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "sites"
     response 200, "Success"
@@ -45,8 +45,8 @@ defmodule EdgeCommanderWeb.SitesController do
     summary "Delete site by ID"
     parameters do
       id :path, :string, "Site id to delete", required: true
-      api_key :query, :string, "", required: true, default: "ea3f489a45c98eab5cc22e38db1071e8"
-      api_id :query, :string, "", required: true, default: "2091d756"
+      api_id :query, :string, "", required: true
+      api_key :query, :string, "", required: true
     end
     tag "sites"
     response 200, "Success"
